--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                     </div>
                 </div>
 
-                <button type="submit">添加事项</button>
+                <div class="form-actions">
+                    <button type="submit">添加事项</button>
+                    <button type="button" onclick="cancelEdit()" class="cancel-button" style="display: none;">取消</button>
+                </div>
             </form>
 
             <!-- New configuration area -->
